samples/_failures_safe/1761595059_63cd25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc4e74ff.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_dc4e74ff.c:166: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_dc4e74ff.c:165:5: error: expected declaration or statement at end of input
  165 |     if
      |     ^~
